Updated calendar event changes.

--- a/totalhr.web/Content/css/popup.css
+++ b/totalhr.web/Content/css/popup.css
@@ -156,7 +156,7 @@ body, html {
     #dvReminderContent span.row span.td, #dvReminderContent span.row span.tdtop{display: block;float: left;left:2px;}
     #dvReminderContent span.row span.tdtop{ position: relative;top: 0px;}
 
-   #sprepeatinfo{ display: block;float: left;width: 100%;margin: 10px 0;color:#7b7b7b;}
+   #sprepeatinfo{ display: block;float: left;margin: 10px 0;width: 100%;color:#7b7b7b;}
 
 .block .repeatcount {
     color:blue;cursor:pointer;
@@ -234,7 +234,7 @@ div#toolbox {
 }
 
 div.popupedit {
-    width: 240px;position: relative;left:200px;z-index: 10000;background-color:#f9f9f9;border: 1px solid grey;padding:5px 0 0 5px;
+    float: left;width: 240px;position: relative;left:200px;z-index: 10000;background-color:#f9f9f9;border: 1px solid grey;padding:5px 0 0 5px;
 }
 
 div.popupedit .spclose {
@@ -245,3 +245,7 @@ div.popupedit .spclose {
 .collapse {
     background-image:url('/content/images/minus.png');
 }
+
+.smalltxt{ width: 100px;}
+
+.linespan{ float: left;width: 100%;display: block;}
